--- a/projects/magic-form/package.json
+++ b/projects/magic-form/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "magic-form",
-  "version": "0.0.1",
+  "name": "mt-form-builder",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^8.0.1",
     "@angular/core": "^8.0.1",
