--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "magic-form-builder": {
+    "mt-form-builder-platform": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -56,21 +56,21 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "magic-form-builder:build"
+            "browserTarget": "mt-form-builder-platform:build"
           },
           "configurations": {
             "qa": {
-              "browserTarget": "magic-form-builder:build:qa"
+              "browserTarget": "mt-form-builder-platform:build:qa"
             },
             "production": {
-              "browserTarget": "magic-form-builder:build:production"
+              "browserTarget": "mt-form-builder-platform:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "magic-form-builder:build"
+            "browserTarget": "mt-form-builder-platform:build"
           }
         },
         "test": {
@@ -103,7 +103,7 @@
         }
       }
     },
-    "magic-form-builder-e2e": {
+    "mt-form-builder-platform-e2e": {
       "root": "",
       "sourceRoot": "e2e",
       "projectType": "application",
@@ -112,7 +112,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "magic-form-builder:serve"
+            "devServerTarget": "mt-form-builder-platform:serve"
           }
         },
         "lint": {
@@ -126,38 +126,38 @@
         }
       }
     },
-    "magic-form": {
-      "root": "projects/magic-form",
-      "sourceRoot": "projects/magic-form/src",
+    "mt-form-builder": {
+      "root": "projects/mt-form-builder",
+      "sourceRoot": "projects/mt-form-builder/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/magic-form/tsconfig.lib.json",
-            "project": "projects/magic-form/ng-package.json"
+            "tsConfig": "projects/mt-form-builder/tsconfig.lib.json",
+            "project": "projects/mt-form-builder/ng-package.json"
           },
           "configurations": {
             "production": {
-              "project": "projects/magic-form/ng-package.prod.json"
+              "project": "projects/mt-form-builder/ng-package.prod.json"
             }
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/magic-form/src/test.ts",
-            "tsConfig": "projects/magic-form/tsconfig.spec.json",
-            "karmaConfig": "projects/magic-form/karma.conf.js"
+            "main": "projects/mt-form-builder/src/test.ts",
+            "tsConfig": "projects/mt-form-builder/tsconfig.spec.json",
+            "karmaConfig": "projects/mt-form-builder/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/magic-form/tsconfig.lib.json",
-              "projects/magic-form/tsconfig.spec.json"
+              "projects/mt-form-builder/tsconfig.lib.json",
+              "projects/mt-form-builder/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -167,7 +167,7 @@
       }
     }
   },
-  "defaultProject": "magic-form-builder",
+  "defaultProject": "mt-form-builder-platform",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
