--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magic-form-builder",
+  "name": "mt-form-builder-platform",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lib": "ng build magic-form --prod --watch"
+    "lib": "ng build mt-form-builder --prod --watch"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1",
-    "magic-form": "file:output-lib/magic-form"
+    "mt-form-builder": "file:output-lib/mt-form-builder"
   },
   "devDependencies": {
     "@angular-devkit/build-ng-packagr": "~0.800.0",
