--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build mt-form-builder --prod && ng build --prod",
+    "build": "ng build --prod",
+    "build:lib": "ng build mt-form-builder --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
