--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "mt-form-builder": "file:output-lib/mt-form-builder"
+    "mt-form-builder": "file:output-lib/mt-form-builder",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-ng-packagr": "~0.800.0",
