--- a/projects/mt-form-builder/package.json
+++ b/projects/mt-form-builder/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mt-form-builder",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "peerDependencies": {
-    "tslib": "^2.0.0",
     "@angular/common": "~10.2.0",
     "@angular/core": "~10.2.0",
     "rxjs": "~6.6.3",
     "@angular/animations": "^10.2.0",
     "@angular/cdk": "^10.2.6",
     "@angular/material": "^10.2.6"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
